--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .stats {
+    @apply bg-[#091f1c] text-white p-4 flex-1 rounded-md border-2 border-[#004337];
+  }
+  .stats-container {
+    @apply bg-[#091f1c] p-5 rounded-lg border-[#004337] border;
+  }
+  .countdown {
+    @apply p-8 text-5xl text-center text-white rounded-lg lg:min-w-[150px] bg-[#013f34];
+  }
+  .countdown-label {
+    @apply text-white uppercase text-center text-base pt-4 font-bold;
+  }
+  .admin-button {
+    @apply bg-[#091f1c] text-center p-2 flex-1 rounded-md border-2 border-[#004337] hover:bg-emerald-500/50;
+  }
+}
